@@ -304,6 +304,7 @@ int Usecode_actor_action::handle_event
 	Game_window *gwin = Game_window::get_game_window();
 	gwin->get_usecode()->call_usecode(fun, item, 
 			(Usecode_machine::Usecode_events) eventid);
+	gwin->set_all_dirty();		// Clean up screen.
 	gwin->set_mode(Game_window::normal);
 	return 0;			// That's all.
 	}
