@@ -1,3 +1,8 @@
+2001-01-20  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* gamewin.cc: Bug fixes:  Theft, right-double-click, crash after
+	Alagnar is killed
+
 2001-01-19  Tristan Tarrant <nadir@users.sourceforge.net>
 	* tools/u7shp.c: renamed. As per Ryan's request, the plugin now uses 
 	  guides to identify the hotspot. Caveat: only the hotspot of the first 
